# lambda

./: README.md
cookie-consent/: Cargo.toml  README.md  wrangler.toml
cookie-consent/src/: anonymous_ip.rs  client_req.rs  consent.rs  cookie_consent.rs  geolocation.rs  lib.rs  server.rs
legal/cookie-consent/: .gitignore  Cargo.toml  README.md  wrangler.toml
legal/cookie-consent/src/: anonymous_ip.rs  client_consent.rs  client_req.rs  consent.rs  cookie_consent.rs  geolocation.rs  lib.rs  server.rs
